modificações de teste nas grids

--- a/testecomarea.html
+++ b/testecomarea.html
@@ -25,14 +25,14 @@
     </section>
     
     <main>
-        <section class="conteudo">
+        <section class="conteudo-chave-produtos">
             <div class="grid">
                 <div></div>
 
                 <div class="catalogo-principal">
                     <a href="#"><img src="./assets/img/v2_tablito-30454210-png.png.ulenscale1.png" alt=""></a>
                     <h2>Picolé Tablito</h2>
-                    <p>Picolé de chocolate tradicional e branco 106g (R$ 0,05/g)</p>
+                    <p class="paragrafo-catalogo">Picolé de chocolate tradicional e branco 106g (R$ 0,05/g)</p>
                     <h3>R$ 5,00</h3>
 
                 </div>
@@ -42,7 +42,7 @@
                 <div class="catalogo-principal">
                     <a href="#"><img src="./assets/img/kibon-p-chica1.png" alt=""></a>
                     <h2>Chica Bon</h2>
-                    <p>Picolé de chocolate tradicional e branco 106g (R$ 0,05/g)</p>
+                    <p class="paragrafo-catalogo">Picolé de chocolate tradicional e branco 106g (R$ 0,05/g)</p>
                     <h3>R$ 5,00</h3>
                 </div>
                     
