--- a/testecomarea.html
+++ b/testecomarea.html
@@ -59,13 +59,13 @@
         </div>
     </main>
 
-    <section class="footer">
+    <footer class="footer">
         <div>
             <a href="#" class="baixo-logo"><img src="./assets/img/logo.svg" alt="imagem-logo"></a>
         </div>
 
         <div class="paragrafo-footer">
-            <p>Made with &lt/&gt and <span>❤</span> by Aslay</p>
+            <p>Made with &lt/&gt and <span class="hearth">❤</span> by Aslay</p>
         </div>
 
         <div class="lista-contato">
@@ -84,6 +84,6 @@
                 </li>
             </ul>
         </div>
-    </section>
+    </footer>
 </body>
 </html>
